# GoofyCast

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.hpp
src/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/gcast/: CMakeLists.txt  GcastUtils.cpp  GcastUtils.hpp  Lights.hpp  Material.hpp
src/object/: CMakeLists.txt  Hittable.cpp  Hittable.hpp  HittableList.hpp  Object.cpp  Object.hpp
src/objects/: CMakeLists.txt  HittableObject.cpp  HittableObject.hpp
src/rayimage/: CMakeLists.txt  Image.cpp
src/raymath/: CMakeLists.txt  Color.cpp  Color.hpp
src/raytrace/: CMakeLists.txt  Raytrace.cpp  Raytrace.hpp
src/vec3/: CMakeLists.txt  Vec3.cpp  Vec3.hpp
